--- a/moviereviewsproject/movie/templates/home.html
+++ b/moviereviewsproject/movie/templates/home.html
@@ -1,5 +1,8 @@
 <!--<h1>Welcome to Home Page</h1> -->
 <!--<h1>Welcome to Home Page, {{name}}</h1> -->
+<head>
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
 <h1>Welcome to Home Page, <span style="color:greenyellow;">{{name}}</span>"</h1>
 <h2>This is the full home page</h2>
 
@@ -25,3 +28,4 @@
     {% endfor %}
     <br>
 </div>
+
